--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,9 +29,9 @@
     <TextView
         android:id="@+id/tvRegister"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Don't have an account? Register"
-        android:textColor="@android:color/holo_blue_dark"
+        android:layout_height="33dp"
+        android:layout_marginTop="16dp"
         android:gravity="center"
-        android:layout_marginTop="16dp"/>
+        android:text="Don't have an account? Register"
+        android:textColor="@android:color/holo_blue_dark" />
 </LinearLayout>
