--- a/app/src/main/res/layout/activity_ticket_booking.xml
+++ b/app/src/main/res/layout/activity_ticket_booking.xml
@@ -5,6 +5,14 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Welcome, User"
+        android:textSize="18sp"
+        android:layout_marginBottom="16dp"/>
+
     <Button
         android:id="@+id/btnSelectDate"
         android:layout_width="match_parent"
