--- a/app/src/main/res/layout/activity_ticket_booking.xml
+++ b/app/src/main/res/layout/activity_ticket_booking.xml
@@ -9,9 +9,17 @@
         android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
         android:text="Welcome, User"
-        android:textSize="18sp"
-        android:layout_marginBottom="16dp"/>
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/btnAddPassenger"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginTop="16dp"
+        android:text="添加乘客" />
 
     <Button
         android:id="@+id/btnSelectDate"
