--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,17 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Background color for the app -->
+        <item name="android:windowBackground">@color/light_gray</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Book_Airplanetacket.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Book_Airplanetacket.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Book_Airplanetacket.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
