--- a/app/src/main/res/layout/activity_ticket_booking.xml
+++ b/app/src/main/res/layout/activity_ticket_booking.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Welcome, User"
+        android:text="欢迎！用户"
         android:textSize="18sp" />
 
     <Button
