--- a/app/src/main/res/layout/activity_booking_details.xml
+++ b/app/src/main/res/layout/activity_booking_details.xml
@@ -66,7 +66,7 @@
         android:id="@+id/btnOrderTicket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Order Ticket"
+        android:text="前往支付"
         android:layout_marginTop="32dp"/>
 
 </LinearLayout>
