--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -9,8 +9,8 @@
         android:id="@+id/tvPaymentMethod"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Select Payment Method"
-        android:textSize="18sp"
+        android:text="选择支付方式"
+        android:textSize="32sp"
         android:textStyle="bold"
         android:layout_marginBottom="16dp"/>
 
@@ -30,7 +30,7 @@
             android:id="@+id/radioDebitCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Debit Card"/>
+            android:text="Visa"/>
 
         <RadioButton
             android:id="@+id/radioPayPal"
@@ -56,7 +56,7 @@
         android:id="@+id/btnProceedPayment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Proceed Payment"
+        android:text="确认支付"
         android:layout_marginTop="32dp"/>
 
 </LinearLayout>
