--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,15 +2,26 @@
     <!-- Base application theme. -->
     <style name="Theme.Book_Airplanetacket" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/macaron_purple</item>
+        <item name="colorPrimaryVariant">@color/macaron_lavender</item>
+        <item name="colorOnPrimary">@color/macaron_white</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/macaron_mint</item>
+        <item name="colorSecondaryVariant">@color/macaron_blue</item>
+        <item name="colorOnSecondary">@color/macaron_dark_gray</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!-- Background color for the app -->
+        <item name="android:windowBackground">@color/macaron_light_gray</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="Theme.Book_Airplanetacket.NoActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
+    <style name="Theme.Book_Airplanetacket.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+
+    <style name="Theme.Book_Airplanetacket.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
