--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-    <color name="light_gray">#FFE0E0E0</color>
-    <color name="dark_gray">#FF424242</color>
+    <color name="macaron_pink">#FFC1A3B9</color> <!-- 马卡龙粉色 -->
+    <color name="macaron_lavender">#FFD7BDE2</color> <!-- 马卡龙薰衣草色 -->
+    <color name="macaron_mint">#FFB2DFDB</color> <!-- 马卡龙薄荷绿 -->
+    <color name="macaron_yellow">#FFFFF9C4</color> <!-- 马卡龙黄色 -->
+    <color name="macaron_peach">#FFFFCCBC</color> <!-- 马卡龙桃色 -->
+    <color name="macaron_blue">#FFBBDEFB</color> <!-- 马卡龙蓝色 -->
+    <color name="macaron_purple">#FFE1BEE7</color> <!-- 马卡龙紫色 -->
+    <color name="macaron_white">#FFFFFFFF</color> <!-- 白色 -->
+    <color name="macaron_light_gray">#FFE0E0E0</color> <!-- 浅灰色 -->
+    <color name="light_gray">#FFE0E0E0</color>-->
+    <color name="macaron_dark_gray">#FF757575</color> <!-- 深灰色 -->
 </resources>
+
+    <!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<resources>-->
+<!--    <color name="purple_200">#FFC1A3B9</color>-->
+<!--    <color name="purple_500">#FF6200EE</color>-->
+<!--    <color name="purple_700">#FF3700B3</color>-->
+<!--    <color name="teal_200">#FF03DAC5</color>-->
+<!--    <color name="teal_700">#FF018786</color>-->
+<!--    <color name="black">#FF000000</color>-->
+<!--    <color name="white">#FFFFFFFF</color>-->
+<!--    <color name="light_gray">#FFE0E0E0</color>-->
+<!--    <color name="dark_gray">#FF424242</color>-->
+<!--</resources>-->
